# openquiz

./: .gitignore  README.md  package.json
apps/backend/: pyproject.toml
apps/frontend/web/: package.json  pnpm-lock.yaml
